--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,65 @@ dist.dir=dist
 dist.jar=${dist.dir}/Thesaurus.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-io-2.8.0-javadoc.jar=C:\\Users\\vinicosta\\Desktop\\commons-io-2.8.0\\commons-io-2.8.0-javadoc.jar
+file.reference.commons-io-2.8.0-sources.jar=C:\\Users\\vinicosta\\Desktop\\commons-io-2.8.0\\commons-io-2.8.0-sources.jar
+file.reference.commons-io-2.8.0-test-sources.jar=C:\\Users\\vinicosta\\Desktop\\commons-io-2.8.0\\commons-io-2.8.0-test-sources.jar
+file.reference.commons-io-2.8.0-tests.jar=C:\\Users\\vinicosta\\Desktop\\commons-io-2.8.0\\commons-io-2.8.0-tests.jar
+file.reference.commons-io-2.8.0.jar=C:\\Users\\vinicosta\\Desktop\\commons-io-2.8.0\\commons-io-2.8.0.jar
+file.reference.derby.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derby.jar
+file.reference.derby.jar-1=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derby.jar
+file.reference.derby.war=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derby.war
+file.reference.derbyclient.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyclient.jar
+file.reference.derbyclient.jar-1=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derbyclient.jar
+file.reference.derbyLocale_cs.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_cs.jar
+file.reference.derbyLocale_de_DE.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_de_DE.jar
+file.reference.derbyLocale_es.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_es.jar
+file.reference.derbyLocale_fr.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_fr.jar
+file.reference.derbyLocale_hu.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_hu.jar
+file.reference.derbyLocale_it.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_it.jar
+file.reference.derbyLocale_ja_JP.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_ja_JP.jar
+file.reference.derbyLocale_ko_KR.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_ko_KR.jar
+file.reference.derbyLocale_pl.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_pl.jar
+file.reference.derbyLocale_pt_BR.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_pt_BR.jar
+file.reference.derbyLocale_ru.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_ru.jar
+file.reference.derbyLocale_zh_CN.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_zh_CN.jar
+file.reference.derbyLocale_zh_TW.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyLocale_zh_TW.jar
+file.reference.derbynet.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbynet.jar
+file.reference.derbyoptionaltools.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyoptionaltools.jar
+file.reference.derbyrun.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbyrun.jar
+file.reference.derbytools.jar=C:\\Users\\vinicosta\\Desktop\\db-derby-10.14.2.0-bin\\lib\\derbytools.jar
 file.reference.jxl.jar=C:\\Users\\vinicosta\\Desktop\\tep2\\jexcelapi\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar}:\
+    ${file.reference.derby.jar}:\
+    ${file.reference.derby.war}:\
+    ${file.reference.derbyLocale_cs.jar}:\
+    ${file.reference.derbyLocale_de_DE.jar}:\
+    ${file.reference.derbyLocale_es.jar}:\
+    ${file.reference.derbyLocale_fr.jar}:\
+    ${file.reference.derbyLocale_hu.jar}:\
+    ${file.reference.derbyLocale_it.jar}:\
+    ${file.reference.derbyLocale_ja_JP.jar}:\
+    ${file.reference.derbyLocale_ko_KR.jar}:\
+    ${file.reference.derbyLocale_pl.jar}:\
+    ${file.reference.derbyLocale_pt_BR.jar}:\
+    ${file.reference.derbyLocale_ru.jar}:\
+    ${file.reference.derbyLocale_zh_CN.jar}:\
+    ${file.reference.derbyLocale_zh_TW.jar}:\
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derbynet.jar}:\
+    ${file.reference.derbyoptionaltools.jar}:\
+    ${file.reference.derbyrun.jar}:\
+    ${file.reference.derbytools.jar}:\
+    ${file.reference.derbyclient.jar-1}:\
+    ${file.reference.derby.jar-1}:\
+    ${file.reference.commons-io-2.8.0-javadoc.jar}:\
+    ${file.reference.commons-io-2.8.0-sources.jar}:\
+    ${file.reference.commons-io-2.8.0-test-sources.jar}:\
+    ${file.reference.commons-io-2.8.0-tests.jar}:\
+    ${file.reference.commons-io-2.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
