--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.jxl.jar=C:\\Users\\silvfilh\\.m2\\repository\\net\\sourceforge\\jexcelapi\\jxl\\2.6.12\\jxl.jar
 user.properties.file=C:\\Users\\silvfilh\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
