--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -85,7 +85,8 @@ javac.classpath=\
     ${file.reference.commons-io-2.8.0-sources.jar}:\
     ${file.reference.commons-io-2.8.0-test-sources.jar}:\
     ${file.reference.commons-io-2.8.0-tests.jar}:\
-    ${file.reference.commons-io-2.8.0.jar}
+    ${file.reference.commons-io-2.8.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
